Refine external orders date column layout to prevent wrapping

--- a/custom/plugins/ExternalOrders/src/Resources/app/administration/src/module/external-orders/page/external-orders-list/external-orders-list.scss
+++ b/custom/plugins/ExternalOrders/src/Resources/app/administration/src/module/external-orders/page/external-orders-list/external-orders-list.scss
@@ -315,9 +315,7 @@
     }
 
     &__table th:nth-child(5),
-    &__table td:nth-child(5),
-    &__table th:nth-child(6),
-    &__table td:nth-child(6) {
+    &__table td:nth-child(5) {
         overflow-wrap: anywhere;
     }
 
@@ -335,6 +333,18 @@
         &--actions {
             width: 90px;
             text-align: center;
+        }
+
+
+        &--order-reference {
+            width: 110px;
+        }
+
+        &--date {
+            width: 190px;
+            white-space: nowrap;
+            overflow-wrap: normal;
+            word-break: normal;
         }
     }
 
